# IronCalc-Ruby

./: .gitignore  .yardopts  CHANGELOG.md  CLAUDE.md  Cargo.toml  Gemfile  LICENSE-Apache-2.0.md  LICENSE-MIT.md  README.md  Rakefile  ironcalc.gemspec
.github/workflows/: build.yml  docs.yml  release.yml
docs/: COMPETITIVE-LANDSCAPE.md
ext/ironcalc/: Cargo.toml  extconf.rb
ext/ironcalc/src/: error.rs  lib.rs  model.rs  user_model.rs
lib/: ironcalc.rb
lib/ironcalc/: model.rb  native_methods.rb  version.rb
tasks/: changelog.rake  parity.rake  release.rake  yard.rake
test/: calc_tests_test.rb  fixtures_helper.rb  ironcalc_test.rb  surface_test.rb  user_model_test.rb
