[package]
name = "ironcalc_ruby"
version = "0.7.1"
edition = "2021"
publish = false

[lib]
name = "ironcalc_ruby"
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcode = "0.6.8"
# The IronCalc engine, published on crates.io as `ironcalc`. Renamed to `xlsx`
# here so the source can refer to `xlsx::base`, `xlsx::import`, `xlsx::export`.
xlsx = { package = "ironcalc", version = "0.7.1" }
